Make ComponentCollection and MtasSolrCollectionCacheItem fields private